@@ -40,6 +40,7 @@
 - fix typo in update_hosts_mounts().
 - fix hosts map update on reload.
 - make negative cache update consistent for all lookup modules.
+- ensure negative cache isn't updated on remount.
 
 04/06/2014 autofs-5.1.0
 =======================
